--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Miriam's Baby Shower",
+  "name": "Miriam and Oscar's Baby Shower",
   "homepage" : "https://sano2019.github.io/miriam-quiz",
   "version": "0.1.0",
   "private": true,
