--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Miriam's Baby Shower",
-  "name": "Miriam's Baby Shower Quiz",
+  "short_name": "Miriam & Oscar's Baby Shower",
+  "name": "Miriam & Oscar's Baby Shower Quiz",
   "icons": [
     {
       "src": "favicon.ico",
